cmake_minimum_required(VERSION 3.31)
project(SS1 C)

set(CMAKE_C_STANDARD 11)

add_executable(ex123 PTIT_CNTT1_IT201_SESSION01_BAI123.c)
add_executable(ex4 PTIT_CNTT1_IT201_SESSION01_BAI4.c)
add_executable(ex5 PTIT_CNTT1_IT201_SESSION01_BAI5.c)
add_executable(ex6 PTIT_CNTT1_IT201_SESSION01_BAI6.c)
add_executable(ex7 PTIT_CNTT1_IT201_SESSION01_BAI7.c)
add_executable(ex8 PTIT_CNTT1_IT201_SESSION01_BAI8.c)